--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     position: relative;
+    box-sizing: border-box;
 }
 
 html, body {
@@ -62,11 +63,16 @@ h2 {
 }
 
 #videolist {
+    position: absolute;
+    top: 0;
+    left: 0;
+
     display: flex;
     flex-direction: column;
     justify-content: start;
+
     width: 33vw;
-    height: calc(100vh - 2rem);
+    height: 100vh;
     overflow-y: scroll;
 
     border: 1px solid black;
@@ -104,4 +110,13 @@ h2 {
     background-size: contain;
     width: 1rem;
     height: 1rem;
+}
+
+#controlpanel {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    width: 67vw;
+    height: 100vh;
 }
