--- a/styles.css
+++ b/styles.css
@@ -120,3 +120,10 @@ h2 {
     width: 67vw;
     height: 100vh;
 }
+
+.settingspanel {
+    width: calc(67vw / 3);
+    height: 67vh;
+    float: left;
+    padding: 1rem;
+}
