--- a/styles.css
+++ b/styles.css
@@ -60,20 +60,27 @@ h2 {
 }
 
 #app {
-    display: flex;
-    align-content: start;
+    display: grid;
+    grid-template-columns: 2;
+    grid-template-rows: 1;
+
+    gap: 1vmin;
+
+    padding: 1vmin;
+
+    background-color: #35c914;
+}
+
+.app-panel {
+    background-color: white;
+    border: 1vmin solid white;
+    border-radius: 1vmin;
 }
 
 #videolist {
-    position: absolute;
-    top: 0;
-    left: 0;
-
     width: 33vw;
-    height: 100vh;
     overflow-y: scroll;
-
-    border: 1px solid black;
+    grid-column: 1;
 }
 
 .videolistitem {
@@ -110,16 +117,11 @@ h2 {
 }
 
 #controlpanel {
-    position: absolute;
-    top: 0;
-    right: 0;
-
-    width: 67vw;
-    height: 100vh;
+    grid-column: 2;
 }
 
 .settingspanel {
-    width: calc(67vw / 3);
+    width: calc(100% / 3);
     float: left;
     padding: 1rem;
 }
