--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 p,
@@ -36,21 +37,25 @@ ul {
     transform: translate(-50%, -50%);
 }
 
+h1, h2, h3, h4, h5, h6
+{
+    font-weight: bold;
+    font-family: 'Raleway';
+}
+
 h1 {
     font-size: 3rem;
-    font-weight: bold;
     text-align: center;
 }
 
 h2 {
     font-size: 2rem;
-    font-weight: bold;
 }
 
 header {
     height: 5vh;
     width: 100vw;
-    border-bottom: 0.1rem solid #AAAAAA;
+    border-bottom: 0.1rem solid #AAA;
 }
 
 #logo {
@@ -65,27 +70,27 @@ header {
 
 #app {
     display: grid;
-    grid-template-columns: 2;
-    grid-template-rows: 1;
-    gap: 1vmin;
-    padding: 1vmin;
+    grid-template-columns: 1 1;
+    grid-template-rows: 1 1;
+    height: 95vh;
 }
 
 .app-panel {
     background-color: white;
-    border: 1vmin solid white;
-    border-radius: 1vmin;
 }
 
 #videolist {
     width: 33vw;
     overflow-y: scroll;
     grid-column: 1;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 
 .videolistitem {
     height: 9rem;
     overflow: hidden;
+    border-bottom: 0.05rem solid #AAA;
 }
 
 .videolistitem img {
@@ -118,6 +123,8 @@ header {
 
 #controlpanel {
     grid-column: 2;
+    grid-row: 1;
+    border-left: 0.1rem solid #AAA;
 }
 
 .settingspanel {
