--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,8 @@ header {
 
 #app {
     display: grid;
-    grid-template-columns: 1 1;
-    grid-template-rows: 1 1;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
     height: 95vh;
 }
 
@@ -80,11 +80,11 @@ header {
 }
 
 #videolist {
-    width: 33vw;
+    height: 100%;
     overflow-y: scroll;
     grid-column: 1;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row: 1 / span 2;
+    border-right: 0.1rem solid #AAA;
 }
 
 .videolistitem {
@@ -124,11 +124,17 @@ header {
 #controlpanel {
     grid-column: 2;
     grid-row: 1;
-    border-left: 0.1rem solid #AAA;
+
+    border-bottom: 0.1rem solid #AAA;
 }
 
 .settingspanel {
     width: calc(100% / 3);
     float: left;
     padding: 1rem;
+}
+
+#preview-panel {
+    grid-column: 2;
+    grid-row: 2;
 }
