--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 * {
     position: relative;
     box-sizing: border-box;
+    --border-color: #AAA;
+    --brand-color: #35c914;
+    --shadow-color: #b1d4aa80;
 }
 
 html,
@@ -55,7 +58,8 @@ h2 {
 header {
     height: 5vh;
     width: 100vw;
-    border-bottom: 0.1rem solid #AAA;
+    border-bottom: 0.1rem solid var(--border-color);
+    box-shadow: 0.25rem 0.25rem 0.5rem var(--shadow-color);
 }
 
 #logo {
@@ -72,25 +76,33 @@ header {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr 1fr;
+    gap: 1rem;
+    padding: 1rem;
     height: 95vh;
 }
 
 .app-panel {
     background-color: white;
+    border: 0.1rem solid var(--border-color);
+    border-radius: 0.5rem;
+    box-shadow: 0 0.25rem 0.5rem var(--shadow-color);
 }
 
-#videolist {
+#video-panel {
     height: 100%;
-    overflow-y: scroll;
+    overflow: hidden;
     grid-column: 1;
     grid-row: 1 / span 2;
-    border-right: 0.1rem solid #AAA;
+}
+
+#video-list {
+    height: 100%;
+    overflow-y: scroll;
 }
 
 .videolistitem {
     height: 9rem;
     overflow: hidden;
-    border-bottom: 0.05rem solid #AAA;
 }
 
 .videolistitem img {
@@ -123,9 +135,7 @@ header {
 
 #controlpanel {
     grid-column: 2;
-    grid-row: 1;
-
-    border-bottom: 0.1rem solid #AAA;
+    grid-row: 1 3;
 }
 
 .settingspanel {
@@ -134,7 +144,7 @@ header {
     padding: 1rem;
 }
 
-#preview-panel {
+/*#preview-panel {
     grid-column: 2;
     grid-row: 2;
-}
+}*/
