--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,28 @@ h2 {
     font-size: 2rem;
 }
 
+button {
+    background-color: var(--brand-color);
+    color: white;
+    border-radius: 0.5rem;
+    border: 0;
+    box-shadow: 0 0.25rem 0.5rem var(--shadow-color);
+    font-family: "Raleway", sans-serif;
+    font-weight: bold;
+}
+
+.small-button {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.5rem;
+}
+
+.big-button {
+    min-width: 9rem;
+    height: 3rem;
+    font-size: 2rem;
+}
+
 header {
     height: 5vh;
     width: 100vw;
