--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     --border-color: #AAA;
     --brand-color: #35c914;
-    --shadow-color: #b1d4aa80;
+    --bg-color: #e1edde;
 }
 
 html,
@@ -15,6 +15,7 @@ body {
     height: 100vh;
     overflow-x: hidden;
     overflow-y: hidden;
+    background-color: var(--bg-color);
 }
 
 p,
@@ -60,7 +61,6 @@ button {
     color: white;
     border-radius: 0.5rem;
     border: 0;
-    box-shadow: 0 0.25rem 0.5rem var(--shadow-color);
     font-family: "Raleway", sans-serif;
     font-weight: bold;
 }
@@ -81,7 +81,7 @@ header {
     height: 5vh;
     width: 100vw;
     border-bottom: 0.1rem solid var(--border-color);
-    box-shadow: 0.25rem 0.25rem 0.5rem var(--shadow-color);
+    background-color: white;
 }
 
 #logo {
@@ -107,7 +107,6 @@ header {
     background-color: white;
     border: 0.1rem solid var(--border-color);
     border-radius: 0.5rem;
-    box-shadow: 0 0.25rem 0.5rem var(--shadow-color);
 }
 
 #video-panel {
@@ -157,7 +156,7 @@ header {
 
 #controlpanel {
     grid-column: 2;
-    grid-row: 1 / span 2;
+    grid-row: 1;
 }
 
 .settingspanel {
@@ -166,7 +165,7 @@ header {
     padding: 1rem;
 }
 
-/*#preview-panel {
+#preview-panel {
     grid-column: 2;
     grid-row: 2;
-}*/
+}
