--- a/styles/shared.css
+++ b/styles/shared.css
@@ -7,6 +7,12 @@
     max-width: 100vw;
 }
 
+html, body {
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+}
+
 .autocenter {
     position: absolute;
     top: 50%;
