--- a/styles/shared.css
+++ b/styles/shared.css
@@ -30,3 +30,27 @@ header {
     margin: 0.25rem;
     height: calc(5vh - 0.5rem);
 }
+
+button {
+    background-color: var(--brand-color);
+    color: white;
+    border-radius: 0.5rem;
+    border: 0;
+    font-family: "Raleway", sans-serif;
+    font-weight: bold;
+}
+
+.small-button {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.5rem;
+}
+
+.big-button {
+    min-width: 9rem;
+    height: 3rem;
+    font-size: 2rem;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
