--- a/styles/shared.css
+++ b/styles/shared.css
@@ -54,3 +54,10 @@ button {
     left: 50%;
     transform: translateX(-50%);
 }
+
+p {
+    font-size: 1.2rem;
+    padding-bottom: 1.5rem;
+    font-family: "Lora", "Times New Roman", serif;
+    line-height: 1.4rem;
+}
