--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,12 @@
+* {
+    position: relative;
+    box-sizing: border-box;
+    --border-color: #AAA;
+    --brand-color: #35c914;
+    --bg-color: #e1edde;
+    max-width: 100vw;
+}
+
 html,
 body {
     position: absolute;
@@ -8,12 +17,14 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
     background-color: var(--bg-color);
+    font-family: serif;
 }
 
 p,
 ul {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+    line-height: 1.4rem;
 }
 
 em {
@@ -36,35 +47,40 @@ ul {
 h1, h2, h3, h4, h5, h6
 {
     font-weight: bold;
-    font-family: 'Raleway';
-}
-
-h1, h2 {
-    text-align: center;
-}
-
-h1 {
-    font-size: 3rem;
+    font-family: sans-serif;
 }
 
 h2 {
     font-size: 2rem;
+    text-align: center;
 }
 
 h3 {
-    font-family: "Roboto", "Arial", sans-serif;
+    margin-bottom: 0.5rem;
 }
 
-header {
-    height: 5vh;
-    width: 100vw;
-    border-bottom: 0.1rem solid var(--border-color);
-    background-color: #fff;
+button {
+    background-color: var(--brand-color);
+    color: white;
+    border-radius: 0.5rem;
+    border: 0;
+    font-family: sans-serif;
+    font-weight: bold;
 }
 
-#logo {
-    margin: 0.25rem;
-    height: calc(5vh - 0.5rem);
+.small-button {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.5rem;
+}
+
+.big-button {
+    min-width: 9rem;
+    height: 3rem;
+    font-size: 2rem;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #google-auth {
@@ -75,10 +91,10 @@ header {
 #app {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 1rem;
     padding: 1rem;
-    height: 95vh;
+    height: 100vh;
 }
 
 .app-panel {
@@ -92,7 +108,6 @@ header {
     height: 100%;
     overflow: hidden;
     grid-column: 1;
-    grid-row: 1 / span 2;
 }
 
 #video-list {
@@ -135,61 +150,28 @@ header {
 
 #controlpanel {
     grid-column: 2;
-    grid-row: 1;
+}
+
+#settings {
+    display: flex;
 }
 
 .settingspanel {
     width: calc(100% / 3);
-    float: left;
     padding: 1rem;
 }
 
-#preview-panel {
-    grid-column: 2;
-    grid-row: 2;
-}
-
-#preview-list {
-    width: 100%;
-    height: 80%;
-    padding-left: 4%;
-}
-
-.preview {
-    width: 16%;
-    margin-right: 4%;
-    float: left;
-}
-
-.preview-thumbnail {
-    width: 100%;
-    aspect-ratio: 16 / 9;
-    border-radius: 12px;
-}
-
-.preview-title {
-    font-family: "Roboto","Arial",sans-serif;
-    font-size: 14px;
-    line-height: 28px;
-    font-weight: 500;
-    overflow: hidden;
-    display: block;
-    max-height: 56px;
-    -webkit-line-clamp: 2;
-    display: box;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-    white-space: normal;
+input[type=text] {
+    width: 60%;
 }
 
 #progress-bar-marquee {
-    width: 100vw;
+    width: 100%;
     height: 100%;
     position: absolute;
     left: 0;
     top: 0;
     background-color: rgba(72, 72, 72, 0.5);
-    display: none;
 }
 
 #progress-bar-container {
